# vulnvibes

./: .gitignore  README.md  context.md.sample  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/hooks/: save_progress.py  validate_investigation_result.py  validate_stage1_output.py
docs/references/: claude-agent-sdk-guide.md
tests/: __init__.py  conftest.py  test_config.py  test_definitions.py  test_models.py  test_reports.py  test_skill_registry.py  test_skills.py
tests/fixtures/: sample_findings.json
vulnvibes/: __init__.py  cli.py  config.py  models.py  skill_registry.py  version.py
vulnvibes/agents/: __init__.py  definitions.py
vulnvibes/orchestrator/: __init__.py  parsers.py  reports.py  schemas.py  stages.py
vulnvibes/providers/: __init__.py  github_client.py  github_tools.py
vulnvibes/skills/: __init__.py
vulnvibes/skills/sast-authentication-testing/: SKILL.md
vulnvibes/skills/sast-authorization-testing/: SKILL.md
vulnvibes/skills/sast-browser-security-testing/: SKILL.md
vulnvibes/skills/sast-cryptography-testing/: SKILL.md
vulnvibes/skills/sast-data-exposure-testing/: SKILL.md
vulnvibes/skills/sast-deserialization-testing/: SKILL.md
vulnvibes/skills/sast-file-security-testing/: SKILL.md
vulnvibes/skills/sast-injection-testing/: SKILL.md
vulnvibes/skills/sast-security-misconfiguration-testing/: SKILL.md
vulnvibes/skills/sast-ssrf-testing/: SKILL.md
vulnvibes/utils/: __init__.py  errors.py  logging.py
